--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
             <!-- Grid container -->
             <div class="container p-2"> </div>
             <!-- Grid container -->
-            <h3 style="color: black;">Made with Love.</h3>
+            <h3 style="color: white;">Made with Love.</h3>
             <!-- Copyright -->
             <div class="text-center p-2" style="background-color: #2E0249;">
-              © 2020 Trendpapa:
-              <a class="text-white" href="https://twitter.com/fola_smd/media">My twitter.</a>
+              fola_smd:
+              <a class="text-white" href="https://twitter.com/fola_smd/media" target="blank">My twitter.</a>
             </div>
             <!-- Copyright -->
           </footer>
